# Metro-GraphRAG-Madrid-Benchmark

./: .env.example  .gitignore  AGENT_GUIDE.md  ESTRUCTURA_PROYECTO.md  LISTA_CAPTURAS_PANTALLA.md  PROCESO_MONGODB.md  PROCESO_NEO4J.md  QUICKSTART.md  README.md  demo_agent.py  main.py  memoria_practica.tex  pyproject.toml  requirements.txt
data/: campus.json  estaciones.json  lineas.json
scripts/: verificar_datos.sh
scripts/mongodb/: consultas_ejemplo.py  consultas_parte_c.py  load_data.py  operaciones_crud.py
scripts/neo4j/: consultas_ejemplo.cypher  load_data.py
src/agent/: __init__.py  evaluate.py  llm_interface.py  recommender.py
