[project]
name = "metro-graphrag-madrid-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.18.0",
    "neo4j==5.16.0",
    "openai>=1.0.0",
    "pymongo==4.6.1",
    "python-dotenv==1.0.0",
    "requests>=2.31.0",
]
